--- a/WebContent/subpages/addFabric.html
+++ b/WebContent/subpages/addFabric.html
@@ -79,7 +79,7 @@
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default" id="add_fabric">Add</button>
+                <button type="submit" class="btn btn-primary" id="add_fabric">Add</button>
             </div>
         </div>
     </form>
