--- a/WebContent/subpages/addUser.html
+++ b/WebContent/subpages/addUser.html
@@ -17,7 +17,7 @@
   
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Add</button>
+      <button type="submit" class="btn btn-primary">Add</button>
     </div>
   </div>
 </form>
