--- a/WebContent/subpages/searchFabric.html
+++ b/WebContent/subpages/searchFabric.html
@@ -11,18 +11,18 @@
         <div class="form-group">
             <label for="cstructnWarp" class="col-sm-2 control-label">Construction</label>
 
-            <div class="col-sm-10 input-group">
-                <input class="form-control" style="width:50%;" id="cstructnWarp" name="cstructnWarp" type="text"/>
-                <input class="form-control" style="width:50%;" id="cstructnWeft" name="cstructnWeft" type="text"/>
+            <div class="col-sm-10 couple-group">
+                <input class="form-control" id="cstructnWarp" name="cstructnWarp" type="text"/>
+                <input class="form-control" id="cstructnWeft" name="cstructnWeft" type="text"/>
             </div>
 
         </div>
         <div class="form-group">
             <label for="yarnWarp" class="col-sm-2 control-label">Yarn Size</label>
 
-            <div class="col-sm-10 input-group">
-                <input class="form-control" style="width:50%;" id="yarnWarp" name="yarnWarp" type="text"/>
-                <input class="form-control" style="width:50%;" id="yarnWeft" name="yarnWeft" type="text"/>
+            <div class="col-sm-10 couple-group">
+                <input class="form-control" id="yarnWarp" name="yarnWarp" type="text"/>
+                <input class="form-control" id="yarnWeft" name="yarnWeft" type="text"/>
             </div>
         </div>
         <div class="form-group">
@@ -32,66 +32,84 @@
                 <input class="form-control" id="content" name="content" type="text"/>
             </div>
         </div>
-        <div class="form-group">
-            <label for="status" class="col-sm-2 control-label">Status</label>
 
-            <div class="col-sm-10">
-                <input class="form-control" id="status" name="status" type="text"/>
+        <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                            more options
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        <div class="form-group">
+                            <label for="status" class="col-sm-2 control-label">Status</label>
+
+                            <div class="col-sm-10">
+                                <input class="form-control" id="status" name="status" type="text"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="weaving" class="col-sm-2 control-label">Weaving</label>
+
+                            <div class="col-sm-10">
+                                <input class="form-control" id="weaving" name="weaving" type="text"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="finishing" class="col-sm-2 control-label">Finishing</label>
+
+                            <div class="col-sm-10">
+                                <input class="form-control" id="finishing" name="finishing" type="text"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="width" class="col-sm-2 control-label">Width</label>
+
+                            <div class="col-sm-10">
+                                <input class="form-control" id="width" name="width" type="text"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="weight" class="col-sm-2 control-label">Weight</label>
+
+                            <div class="col-sm-10">
+                                <input class="form-control" id="weight" name="weight" type="text"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="article" class="col-sm-2 control-label">Article</label>
+
+                            <div class="col-sm-10">
+                                <input class="form-control" id="article" name="article" type="text"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="originalPrice" class="col-sm-2 control-label">OriginalPrice</label>
+
+                            <div class="col-sm-10">
+                                <input class="form-control" id="originalPrice" name="originalPrice" type="text"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="finalPrice" class="col-sm-2 control-label">FinalPrice</label>
+
+                            <div class="col-sm-10">
+                                <input class="form-control" id="finalPrice" name="finalPrice" type="text"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            <label for="weaving" class="col-sm-2 control-label">Weaving</label>
 
-            <div class="col-sm-10">
-                <input class="form-control" id="weaving" name="weaving" type="text"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="finishing" class="col-sm-2 control-label">Finishing</label>
 
-            <div class="col-sm-10">
-                <input class="form-control" id="finishing" name="finishing" type="text"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="width" class="col-sm-2 control-label">Width</label>
-
-            <div class="col-sm-10">
-                <input class="form-control" id="width" name="width" type="text"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="weight" class="col-sm-2 control-label">Weight</label>
-
-            <div class="col-sm-10">
-                <input class="form-control" id="weight" name="weight" type="text"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="article" class="col-sm-2 control-label">Article</label>
-
-            <div class="col-sm-10">
-                <input class="form-control" id="article" name="article" type="text"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="originalPrice" class="col-sm-2 control-label">OriginalPrice</label>
-
-            <div class="col-sm-10">
-                <input class="form-control" id="originalPrice" name="originalPrice" type="text"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="finalPrice" class="col-sm-2 control-label">FinalPrice</label>
-
-            <div class="col-sm-10">
-                <input class="form-control" id="finalPrice" name="finalPrice" type="text"/>
-            </div>
-        </div>
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default" id="search_fabric">Search</button>
+                <button type="submit" class="btn btn-primary" id="search_fabric">Search</button>
             </div>
         </div>
     </form>
