--- a/WebContent/subpages/uploadFabric.html
+++ b/WebContent/subpages/uploadFabric.html
@@ -2,7 +2,8 @@
                         enctype="multipart/form-data">
   <div class="form-group">
     <label for="exampleInputFile">File input</label>
-    <input type="file" id="exampleInputFile">
+    <input type="file" id="exampleInputFile" name ="file">
+    <input type="text" id="linenumber" name ="linenumber">
   </div>
   <button type="submit" class="btn btn-primary" id="upload_fabric">Upload</button>
 </form>
@@ -10,8 +11,8 @@
 <script>
 	$(document).ready(function() {
 
-		$("#upload_fabric").click(function() {
+		//$("#upload_fabric").click(function() {
                
-		});
+		//});
 	});
 </script>
