--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,6 +14,7 @@
     <script src="./bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="./bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/barcode-39.js"></script>
     <!--<script src="./js/json-to-table.js"></script>-->
 </head>
 
@@ -63,8 +64,7 @@
 <div class="main container container-fluid">
     <div class="row">
         <div class="col-md-3">
-            <div id="upper" class="menu">
-            </div>
+            <div id="upper" class="menu"></div>
         </div>
         <div class="col-md-9">
             <div id="middle" class="curved"></div>
